package update to version 20.4.100-2; java versions >= 11 should work